--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/react-dom": "^16.9.0",
     "apollo-boost": "^0.4.7",
     "apollo-link-ws": "^1.0.20",
+    "copy-to-clipboard": "^3.3.1",
     "emotion-theming": "^10.0.27",
     "graphql": "^15.0.0",
     "react": "^16.13.1",
