--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "apollo-boost": "^0.4.7",
     "apollo-link-ws": "^1.0.20",
     "copy-to-clipboard": "^3.3.1",
+    "cypress": "^6.2.0",
     "emotion-theming": "^10.0.27",
     "graphql": "^15.0.0",
     "react": "^16.13.1",
@@ -31,7 +32,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "test:e2e": "cypress open"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -49,6 +51,7 @@
     ]
   },
   "devDependencies": {
+    "@testing-library/cypress": "^7.0.3",
     "@types/react-router": "^5.1.5",
     "@types/react-router-dom": "^5.1.4"
   }
