--- a/package.json
+++ b/package.json
@@ -3,30 +3,30 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@apollo/react-hooks": "^3.1.5",
-    "@chakra-ui/core": "^0.7.0",
-    "@emotion/core": "^10.0.28",
-    "@emotion/styled": "^10.0.27",
-    "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.3.2",
-    "@testing-library/user-event": "^7.1.2",
-    "@types/jest": "^24.0.0",
-    "@types/node": "^12.0.0",
-    "@types/react": "^16.9.0",
-    "@types/react-dom": "^16.9.0",
-    "apollo-boost": "^0.4.7",
+    "@apollo/client": "^3.6.4",
+    "@chakra-ui/icons": "^2.0.0",
+    "@chakra-ui/react": "^2.0.2",
+    "@emotion/react": "^11.9.0",
+    "@emotion/styled": "^11.8.1",
+    "@testing-library/jest-dom": "^5.16.4",
+    "@testing-library/react": "^13.2.0",
+    "@testing-library/user-event": "^14.2.0",
+    "@types/jest": "^27.5.1",
+    "@types/node": "^17.0.35",
+    "@types/react": "^18.0.9",
+    "@types/react-dom": "^18.0.4",
     "apollo-link-ws": "^1.0.20",
     "copy-to-clipboard": "^3.3.1",
-    "cypress": "^6.2.0",
-    "emotion-theming": "^10.0.27",
-    "graphql": "^15.0.0",
-    "react": "^16.13.1",
-    "react-confetti": "^5.0.1",
-    "react-dom": "^16.13.1",
-    "react-router-dom": "^5.1.2",
-    "react-scripts": "3.4.1",
-    "subscriptions-transport-ws": "^0.9.16",
-    "typescript": "~3.7.2"
+    "framer-motion": "^6.3.3",
+    "graphql": "^16.5.0",
+    "graphql-ws": "^5.8.2",
+    "react": "^18.1.0",
+    "react-confetti": "^6.1.0",
+    "react-dom": "^18.1.0",
+    "react-router-dom": "^5.0.0",
+    "react-scripts": "5.0.1",
+    "subscriptions-transport-ws": "^0.11.0",
+    "typescript": "~4.6.4"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -51,9 +51,8 @@
     ]
   },
   "devDependencies": {
-    "@testing-library/cypress": "^7.0.3",
-    "@types/react-router": "^5.1.5",
-    "@types/react-router-dom": "^5.1.4",
-    "history": "^5.0.0"
+    "@types/react-router": "^5.1.18",
+    "@types/react-router-dom": "^5.3.3",
+    "history": "^5.3.0"
   }
 }
